@@ -1,3 +1,10 @@
+Sun Sep 26 22:34:17 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/security.c (remove_with_dropped_privs): Remove; no longer
+	  used.
+	* src/fake_security.c (remove_with_dropped_privs): Likewise.
+	* src/security.h (remove_with_dropped_privs): Likewise.
+
 Sun Sep 26 22:23:26 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* lib/Makefile.am (libman_la_LIBADD): Use $(LTLIBOBJS) rather than
